2008-05-28  Martin Leidig  <mleidig@schlund.de>

	* build.xml: exclude projects/core/dyntxt/statuscodeinfo.xml from 
	pfixcore-data archive

2008-05-27  Martin Leidig  <mleidig@schlund.de>

	Added pfx:isAuthorized XSLT function, which simply checks if page
	access is authorized or not (returning a boolean value, as an 
	alternative or shortcut for the pfx:checkAuthorization function, 
	which returns more fine-grained authorization status information
	in the form of integer constants).

	* src/de/schlund/pfixcore/util/TransformerCallback.java
	* projects/core/xsl/functions.xsl

2008-05-27  Martin Leidig  <mleidig@schlund.de>

	Changed the pfx:button behaviour for pages with authconstraints, which
	don't set an authpage: until now the links to such pages were active
	and requesting them ended with an exception. Now these pages are
	handled like 'invisible', non-accessible, pages, i.e. no link is 
	created, but a span, optionally using the invisibleclass' CSS (or 
	pfx:invisible content). On demand we could also introduce special 
	unauthorized attributes/tags, for now this case is handled together
	with the non-accessible case.

	* src/de/schlund/pfixcore/util/TransformerCallback.java: add method
	checkAuthorization, which returns the authorization state of a page
	* projects/core/xsl/navigation.xsl: add checkAuthorization call to
	isAccessible test (as disjunction)
	* projects/core/xsl/xmlfontify.xsl: show authorization state of 
	each page
	* projects/core/xsl/functions.xsl: added pfx:checkAuthorization
	function

	Added test case:
	* projects/samplebank/txt/common.xml
	* projects/samplebank/conf/config.conf.xml
	* projects/samplebank/conf/depend.xml

2008-05-23  Martin Leidig  <mleidig@schlund.de>

	Improved modification detection: added check which compares file list
	from configuration with DocrootResources from already generated
	statuscode class.
	Improved build: GenerateSCodes now returns Result object containing